--- a/.huskyrc
+++ b/.huskyrc
@@ -1,5 +1,7 @@
 {
-  "hooks": {
-    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
